--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -119,3 +119,20 @@
   margin-top: 35px;
 }
 
+.view-more-btn-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 46px;
+}
+.view-more-btn {
+  width: 175px;
+  height: 43px;
+  border-radius: 30px;
+  background-color: var(--green-color-text-2);
+  color: var(--white-color);
+  font-weight: 600;
+  font-size: 16px;
+  border-style: none;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
